--- a/drawer.css
+++ b/drawer.css
@@ -2,6 +2,8 @@
 
 body {
   font-family: 'Lato', sans-serif;
+  background: #222;
+  color: #fff;
 }
 
 .center {
@@ -16,5 +18,5 @@ body {
 }
 
 #canvas {
-  border: solid 1px #555;
+  border: solid 1px #333;
 }
